【理賠計算】智能合約，Web API化。
